--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,75 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+h1{
+  color: 00171f;
+  margin: 3rem;
+  text-align: center;
+  font-family:Arial, Helvetica, sans-serif;
+  text-decoration: underline;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.outer-div{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
+
+.inputSection, .listSection{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  width: 100%;
+}
+
+input{
+  width: 50rem;
+  padding: 4px;
+  margin: 1rem;
+  border-radius: 10px;
+  border: 2px solid #003459;
+  color:#003459;
+  font-size: 18px;
+}
+
+.btn-main{
+  padding: 6px; 
+  background-color: #007ea7;
+  color: white;
+  border-radius: 10px;
+  width: 7rem;
+  font-size: 15px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.list{
+  width: 65rem;
+  margin:2rem
+}
+
+li{
+  display: grid ;
+  grid-template-columns:  auto 0;
+  list-style: circle;
+  justify-content: space-between; 
+  margin:1rem;
+  padding:1%;
+  align-items: center;
+  border-radius: 10px;
+}
+
+li:nth-child(odd){
+  background-color: #00a8e8;
+}
+
+li:nth-child(even){
+  background-color: #d0cdc9;
+
+}
+
+.rem_btn{
+  margin-left: -20px;
+  background-color:transparent;
+  right:auto;
+  border: 0;
+}
+
